--- a/agenda.html
+++ b/agenda.html
@@ -3,22 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mi Agenda Personal</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 1rem;
-    }
-    .evento {
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-    }
-  </style>
+  <title>📅 Mi Agenda Personal</title>
+  <link rel="stylesheet" href="agenda.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <h1>📅 Mi Agenda de Eventos</h1>
+  <h1>📅 Mi Agenda Personal</h1>
   <div id="agenda">Cargando...</div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -45,7 +35,7 @@
 
       const confirmados = eventos
         .filter(e => Array.isArray(e.usuarios_confirmados) && e.usuarios_confirmados.includes(user.id))
-        .sort((a, b) => new Date(a.fecha) - new Date(b.fecha)); // Ordenar por fecha
+        .sort((a, b) => new Date(a.fecha) - new Date(b.fecha));
 
       if (confirmados.length === 0) {
         document.getElementById("agenda").innerText = "Aún no tienes eventos en tu agenda.";
