--- a/eventos.html
+++ b/eventos.html
@@ -52,8 +52,26 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
     const SUPABASE_URL = "https://uenvbpfyjfdwbleenkyj.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVlbnZicGZ5amZkd2JsZWVua3lqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTA2NTA5MjUsImV4cCI6MjA2NjIyNjkyNX0.23sLCLNvAeRj3apPvgps6nqrVk4Qf7qaBWGyyHqN_qM";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...";
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    navigator.geolocation.getCurrentPosition(async pos => {
+  const { latitude: lat, longitude: lng } = pos.coords;
+  const { data: { user } } = await supabase.auth.getUser();
+  if (!user) return;
+
+  const nombre = user.user_metadata?.full_name || user.email || "Usuario";
+
+  await supabase
+    .from("usuarios_ubicacion")
+    .upsert({
+      id: user.id,
+      nombre,
+      latitud: lat,
+      longitud: lng,
+      actualizado_en: new Date().toISOString()
+    });
+});
+
 
     let mapaPrincipal, mapaNegocio, marcadorNegocio;
 
@@ -79,10 +97,42 @@
         .single();
 
       const gustos = intereses?.gustos || [];
-      const { data: eventos, error } = await supabase.from("eventos").select("*");
-      if (error) {
-        console.error("Error al obtener eventos:", error);
-        return;
+
+      // Obtener emoción más reciente del usuario
+      const { data: emocion } = await supabase
+        .from("estado_emocional_usuario")
+        .select("emocion_detectada")
+        .eq("user_id", user.id)
+        .order("fecha", { ascending: false })
+        .limit(1)
+        .single();
+
+      const emocionDetectada = emocion?.emocion_detectada;
+
+      let eventos = [];
+
+      if (emocionDetectada) {
+        const { data: emocionRow } = await supabase
+          .from("emociones_catalogo")
+          .select("id")
+          .eq("emocion", emocionDetectada)
+          .limit(1)
+          .single();
+
+        const emocionId = emocionRow?.id;
+
+        if (emocionId) {
+          const res = await supabase
+            .from("eventos")
+            .select("*")
+            .eq("emocion_id", emocionId);
+          eventos = res.data || [];
+        }
+      }
+
+      if (eventos.length === 0) {
+        const res = await supabase.from("eventos").select("*");
+        eventos = res.data || [];
       }
 
       mapaPrincipal = L.map('mapa').setView([6.0579, -75.5011], 13);
@@ -256,21 +306,45 @@
         "Espiritualidad": [6, 12, 18]
       }[gusto] || [10, 14, 17];
 
-      const eventos = horarios.map(hora => {
-        const fecha = new Date(ahora);
-        fecha.setDate(ahora.getDate() + 1);
-        fecha.setHours(hora, 0, 0, 0);
-        return {
-          nombre: `Evento en ${nombre}`,
-          lugar: nombre,
-          fecha: fecha.toISOString(),
-          latitud: lat,
-          longitud: lng,
-          gustos_relacionados: [gusto],
-          usuarios_confirmados: [],
-          creado_por: user.id
-        };
-      });
+      // Buscar emoción correspondiente al gusto
+let emocionRelacionada = {
+  "Café": "curiosidad",
+  "Naturaleza": "presencia",
+  "Animales": "amor",
+  "Lectura": "inspiración",
+  "Ejercicio": "gozo",
+  "Espiritualidad": "trascendencia"
+}[gusto];
+
+let emocionId = null;
+
+if (emocionRelacionada) {
+  const { data: emocionRow } = await supabase
+    .from("emociones_catalogo")
+    .select("id")
+    .eq("emocion", emocionRelacionada)
+    .limit(1)
+    .single();
+  emocionId = emocionRow?.id || null;
+}
+
+const eventos = horarios.map(hora => {
+  const fecha = new Date(ahora);
+  fecha.setDate(ahora.getDate() + 1);
+  fecha.setHours(hora, 0, 0, 0);
+  return {
+    nombre: `Evento en ${nombre}`,
+    lugar: nombre,
+    fecha: fecha.toISOString(),
+    latitud: lat,
+    longitud: lng,
+    gustos_relacionados: [gusto],
+    usuarios_confirmados: [],
+    creado_por: user.id,
+    emocion_id: emocionId
+  };
+});
+
 
       await supabase.from("eventos").insert(eventos);
       alert("✅ Negocio y eventos generados.");
